# activity

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
activity/: __init__.py  main.py
activity/core/: activity.py
activity/utils/: __init__.py
tests/: test_activity.py
tests/testfiles/: applewatch-hike.fit  applewatch-indoor-walk.fit  applewatch-treadmill-run.fit  applewatch-workout-laps.fit  applewatch-workout-repeat.fit  applewatch-workoutdoors-run.fit  auuki.fit  ballarat.gpx  buffalo-final.gpx  clearspot.gpx  cpt-loops.fit  cpt.fit  elliptical.fit  garmin-cycling.fit  garmin-run.fit  gotoes-merged.fit  interval-workout.fit  nailcan-singletrack-intervals.gpx  nailcan-singletrack.gpx  zwift-ride.fit
