[project]
name = "activity"
version = "0.1"
description = "Interacting with GPX/FIT activities"
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "Brenton Cleeland"}]
license = "Apache-2.0"
classifiers = []
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/sesh/activity"
Changelog = "https://github.com/sesh/activity/releases"
Issues = "https://github.com/sesh/activity/issues"
CI = "https://github.com/sesh/activity/actions"

[tool.black]
line-length = 139